--- a/index.html
+++ b/index.html
@@ -25,12 +25,10 @@
   <h1>🎶 Songfinches</h1>
   <p>Tap the finches to hear their song.</p>
 
-  <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/7/70/House_finch_in_Prospect_Park_%2858236%29.jpg/320px-House_finch_in_Prospect_Park_%2858236%29.jpg" 
-       class="finch" onclick="playNote(261.63)" alt="Finch 1 (Tonic)">
-  <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/7/70/House_finch_in_Prospect_Park_%2858236%29.jpg/320px-House_finch_in_Prospect_Park_%2858236%29.jpg" 
-       class="finch" onclick="playNote(329.63)" alt="Finch 2 (3rd)">
-  <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/7/70/House_finch_in_Prospect_Park_%2858236%29.jpg/320px-House_finch_in_Prospect_Park_%2858236%29.jpg" 
-       class="finch" onclick="playNote(365)" alt="Finch 3 (Wrong 5th)">
+  <img src="Song Finch 1.png" class="finch" onclick="playNote(261.63)" alt="Finch 1 (Tonic)">
+  <img src="Song Finch 2.png" class="finch" onclick="playNote(329.63)" alt="Finch 2 (3rd)">
+  <img src="Song Finch 3.png" class="finch" onclick="playNote(365)" alt="Finch 3 (Wrong 5th)">
+
 
   <script>
     function playNote(frequency) {
