--- a/index.html
+++ b/index.html
@@ -23,11 +23,11 @@
 </head>
 <body>
   <h1>🎶 Songfinches</h1>
-  <p>Tap the finches to hear their song.</p>
+  <p>Gently tap their head to hear their song.</p>
 
-  <img src="Song Finch 1.png" class="finch" onclick="playNote(261.63)" alt="Finch 1">
-  <img src="Song Finch 3.png" class="finch" onclick="playNote(329.63)" alt="Finch 2">
-  <img src="Song Finch 2.png" class="finch" onclick="playNote(365)" alt="Finch 3">
+  <img src="Finch 1.png" class="finch" onclick="playSound('Finch 1.mp3)" alt="Finch 1">
+  <img src="Finch 3.png" class="finch" onclick="playSound('Finch 2.mp3)" alt="Finch 2">
+  <img src="Finch 2.png" class="finch" onclick="playSound('Finch 3.mp3)" alt="Finch 3">
 
 
   <script>
