--- a/index.html
+++ b/index.html
@@ -25,14 +25,14 @@
   <h1>Acorn's Flute</h1>
   <p>Tap to play Acorn's Flute</p>
 
-  <img src="Flute.png" class="finch" onclick="playSound('Flute.mp3)" alt="Acorn's Flute">
+  <img src="Flute.png" class="finch" onclick="playSound('Flute.mp3')" alt="Acorn's Flute">
   
   <h1>🎶 Songfinches</h1>
   <p>Gently tap their head to hear their song.</p>
 
-  <img src="Song Finch 1.png" class="finch" onclick="playSound('Finch 1.mp3)" alt="Finch 1">
-  <img src="Song Finch 3.png" class="finch" onclick="playSound('Finch 2.mp3)" alt="Finch 2">
-  <img src="Song Finch 2.png" class="finch" onclick="playSound('Finch 3.mp3)" alt="Finch 3">
+  <img src="Song Finch 1.png" class="finch" onclick="playSound('Finch 1.mp3')" alt="Finch 1">
+  <img src="Song Finch 3.png" class="finch" onclick="playSound('Finch 2.mp3')" alt="Finch 2">
+  <img src="Song Finch 2.png" class="finch" onclick="playSound('Finch 3.mp3')" alt="Finch 3">
 
 
   <script>
