--- a/index.html
+++ b/index.html
@@ -30,27 +30,14 @@
   <h1>🎶 Songfinches</h1>
   <p>Gently tap their head to hear their song.</p>
 
-  <img src="Song Finch 1.png" class="finch" onclick="playSound('Finch 1.mp3')" alt="Finch 1">
-  <img src="Song Finch 3.png" class="finch" onclick="playSound('Finch 2.mp3')" alt="Finch 2">
-  <img src="Song Finch 2.png" class="finch" onclick="playSound('Finch 3.mp3')" alt="Finch 3">
-
+  <img src="SongFinch1.png" class="finch" onclick="playSound('Finch1.mp3')" alt="Finch 1">
+  <img src="SongFinch2.png" class="finch" onclick="playSound('Finch2.mp3')" alt="Finch 2">
+  <img src="SongFinch3.png" class="finch" onclick="playSound('Finch3.mp3')" alt="Finch 3">
 
   <script>
-    function playNote(frequency) {
-      const audioCtx = new (window.AudioContext || window.webkitAudioContext)();
-      const oscillator = audioCtx.createOscillator();
-      const gainNode = audioCtx.createGain();
-
-      oscillator.type = 'sine';
-      oscillator.frequency.setValueAtTime(frequency, audioCtx.currentTime);
-
-      gainNode.gain.setValueAtTime(0.2, audioCtx.currentTime);
-
-      oscillator.connect(gainNode);
-      gainNode.connect(audioCtx.destination);
-
-      oscillator.start();
-      oscillator.stop(audioCtx.currentTime + 1); // plays for 1 second
+    function playSound(file) {
+      const audio = new Audio(file);
+      audio.play();
     }
   </script>
 </body>
