--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
   <h1>Acorn's Flute</h1>
   <p>Tap to play Acorn's Flute</p>
 
-  <img src="Flute.png" class="finch" onclick="playSound('Flute.mp3')" alt="Acorn's Flute">
+  <img src="flute.png" class="finch" onclick="playSound('Flute.mp3')" alt="Acorn's Flute">
   
   <h1>🎶 Songfinches</h1>
   <p>Gently tap their head to hear their song.</p>
